Fix crash when encountering `null` custom properties.